--- a/src/app/raw-data/raw-data.component.html
+++ b/src/app/raw-data/raw-data.component.html
@@ -1,62 +1,64 @@
-<div #header [class]="dialogStyle ? '' : 'sticky_header'">
-  <koia-main-toolbar [dialogStyle]="dialogStyle" *ngIf="!hideToolbar" [route]="route" [query]="query"
-    (onFilterChange)="onFilterChanged($event)"></koia-main-toolbar>
-  <mat-progress-bar *ngIf="loading" mode="indeterminate" matTooltip="Loading Data..."></mat-progress-bar>
-  <div id="view_toolbar">
-    <button mat-icon-button [matMenuTriggerFor]="moreMenu">
-      <mat-icon>more_vert</mat-icon>
-    </button>
-    <mat-menu #moreMenu="matMenu">
-      <button mat-menu-item *ngFor="let exportFormat of exportFormats" (click)="saveAs(exportFormat)">
-        <mat-icon>insert_drive_file</mat-icon>
-        <span>Save As {{ exportFormat }}</span>
+<div class="div_wrapper">
+  <div #header class="div_header">
+    <koia-main-toolbar [dialogStyle]="dialogStyle" *ngIf="!hideToolbar" [route]="route" [query]="query"
+      (onFilterChange)="onFilterChanged($event)"></koia-main-toolbar>
+    <mat-progress-bar *ngIf="loading" mode="indeterminate" matTooltip="Loading Data..."></mat-progress-bar>
+    <div id="view_toolbar">
+      <button mat-icon-button [matMenuTriggerFor]="moreMenu">
+        <mat-icon>more_vert</mat-icon>
       </button>
-    </mat-menu>
-    <button id="but_print" mat-button mat-icon-button *ngIf="!dialogStyle" printSectionId="print-section" ngxPrint
-      matTooltip="Print current view" (click)="printView()">
-      <mat-icon>print</mat-icon>
-    </button>
-    <button mat-button [color]="considerColumnWidths ? 'accent' : ''" mat-icon-button
-      [matTooltip]="considerColumnWidths ? 'Ignore specified column widths' : 'Observe specified column widths'"
-      (click)="considerColumnWidths = !considerColumnWidths">
-      <mat-icon>wrap_text</mat-icon>
-    </button>
-    <button mat-button *ngIf="hasObjectDataTypeColumns" [color]="showNestedObjects ? 'accent' : ''" mat-icon-button
-      [matTooltip]="showNestedObjects ? 'Hide nested objects' : 'Show nested objects'"
-      (click)="showNestedObjects = !showNestedObjects">
-      <mat-icon>code</mat-icon>
-    </button>
-    <button mat-button [color]="highlight ? 'accent' : ''" mat-icon-button
-      [matTooltip]="highlight ? 'Undo highlight rows' : 'Higlight rows'" (click)="highlight = !highlight">
-      <mat-icon>highlight</mat-icon>
-    </button>
+      <mat-menu #moreMenu="matMenu">
+        <button mat-menu-item *ngFor="let exportFormat of exportFormats" (click)="saveAs(exportFormat)">
+          <mat-icon>insert_drive_file</mat-icon>
+          <span>Save As {{ exportFormat }}</span>
+        </button>
+      </mat-menu>
+      <button id="but_print" mat-button mat-icon-button *ngIf="!dialogStyle" printSectionId="print-section" ngxPrint
+        matTooltip="Print current view" (click)="printView()">
+        <mat-icon>print</mat-icon>
+      </button>
+      <button mat-button [color]="considerColumnWidths ? 'accent' : ''" mat-icon-button
+        [matTooltip]="considerColumnWidths ? 'Ignore specified column widths' : 'Observe specified column widths'"
+        (click)="considerColumnWidths = !considerColumnWidths">
+        <mat-icon>wrap_text</mat-icon>
+      </button>
+      <button mat-button *ngIf="hasObjectDataTypeColumns" [color]="showNestedObjects ? 'accent' : ''" mat-icon-button
+        [matTooltip]="showNestedObjects ? 'Hide nested objects' : 'Show nested objects'"
+        (click)="showNestedObjects = !showNestedObjects">
+        <mat-icon>code</mat-icon>
+      </button>
+      <button mat-button [color]="highlight ? 'accent' : ''" mat-icon-button
+        [matTooltip]="highlight ? 'Undo highlight rows' : 'Higlight rows'" (click)="highlight = !highlight">
+        <mat-icon>highlight</mat-icon>
+      </button>
+    </div>
   </div>
-</div>
 
-<div #content id="div_table" class="mat-elevation-z8 printable">
+  <div #content id="div_table" class="div_content mat-elevation-z8 printable">
 
-  <table [class]="considerColumnWidths ? 'table_layout_fixed' : 'table_layout_auto'" mat-table [dataSource]="entries"
-    matSort (matSortChange)="sortEntries($event)">
+    <table [class]="considerColumnWidths ? 'table_layout_fixed' : 'table_layout_auto'" mat-table [dataSource]="entries"
+      matSort (matSortChange)="sortEntries($event)">
 
-    <ng-container *ngFor="let column of columns" [matColumnDef]="column.name">
-      <span *ngIf="column.indexed">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header [style.width]="column.width + 'px'">
-          {{ column.name }}</th>
-      </span>
-      <span *ngIf="!column.indexed">
-        <th mat-header-cell *matHeaderCellDef [style.width]="column.width + 'px'">{{ column.name }}</th>
-      </span>
-      <td [class]="'td_' + column.dataType" *matCellDef="let entry" (click)="displayValue(column, entry)">
-        {{ formattedValueOf(column, entry) }}</td>
-    </ng-container>
+      <ng-container *ngFor="let column of columns" [matColumnDef]="column.name">
+        <span *ngIf="column.indexed">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header [style.width]="column.width + 'px'">
+            {{ column.name }}</th>
+        </span>
+        <span *ngIf="!column.indexed">
+          <th mat-header-cell *matHeaderCellDef [style.width]="column.width + 'px'">{{ column.name }}</th>
+        </span>
+        <td [class]="'td_' + column.dataType" *matCellDef="let entry" (click)="displayValue(column, entry)">
+          {{ formattedValueOf(column, entry) }}</td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="columnNames, sticky: true"></tr>
-    <tr mat-row *matRowDef="let entry; columns: columnNames;" [style.background]="highlight ? entry['bgcolor'] : null"
-      [style.color]="highlight ? entry['fgcolor'] : null"></tr>
+      <tr mat-header-row *matHeaderRowDef="columnNames, sticky: true"></tr>
+      <tr mat-row *matRowDef="let entry; columns: columnNames;" [style.background]="highlight ? entry['bgcolor'] : null"
+        [style.color]="highlight ? entry['fgcolor'] : null"></tr>
 
-  </table>
+    </table>
 
-  <mat-paginator #paginator class="mat-paginator-sticky" [pageSizeOptions]="pageSizeOptions" showFirstLastButtons="true"
-    [length]="totalRowCount" (page)="onPageChanged()">
-  </mat-paginator>
+    <mat-paginator #paginator class="mat-paginator-sticky" [pageSizeOptions]="pageSizeOptions"
+      showFirstLastButtons="true" [length]="totalRowCount" (page)="onPageChanged()">
+    </mat-paginator>
+  </div>
 </div>
