--- a/src/styles.css
+++ b/src/styles.css
@@ -32,14 +32,19 @@ body {
   background-size: cover;
 } 
 
-.sticky_header {  
-  position: -webkit-sticky; /* Safari */
-  position: fixed;  
-  top: 0;
-  right: 15; /* otherwise vertical scrollbar remains inactive in header */ 
-  width: calc(100% - 15px); 
-  z-index: 999;
-  border-bottom: 1px solid 	rgb(145, 144, 144);    
+.div_wrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.div_header {
+  flex-shrink: 0;
+}
+
+.div_content {  
+  flex-grow: 1;
+  overflow: auto;
 }
 
 .multi-line-tooltip {
@@ -177,8 +182,9 @@ var {
     visibility: visible;
   }
 
-  #div_content {
+  .div_content {
     display: block !important; 
+    flex-grow: 1;
   }
 
   .div_element {
