--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,2 +1,2 @@
 <mat-progress-bar *ngIf="loading" mode="indeterminate" color="accent"></mat-progress-bar>
-<nvd3 *ngIf="graphOptions && graphData" [options]="graphOptions" [data]="graphData"></nvd3>
+<div id="div_svg"></div>
