--- a/src/app/graph/graph-side-bar/graph-side-bar.component.html
+++ b/src/app/graph/graph-side-bar/graph-side-bar.component.html
@@ -92,10 +92,10 @@
          Link Strength
          <mat-slider id="linkStrength" min="0" max="1" step="0.1" [(ngModel)]="context.linkStrength"></mat-slider>
       </div>
-      <div class="div_label_rotation">
+      <!--div class="div_label_rotation">
          Friction
          <mat-slider min="0" max="1" step="0.1" [(ngModel)]="context.friction"></mat-slider>
-      </div>
+      </div-->
       <div class="div_label_rotation">
          Charge
          <mat-slider min="-1000" max="1000" step="1" [value]="- context.charge" (change)="context.charge = - $event.value">
@@ -105,14 +105,14 @@
          Gravity
          <mat-slider min="0.1" max="1" step="0.1" [(ngModel)]="context.gravity"></mat-slider>
       </div>
-      <div class="div_label_rotation">
+      <!--div class="div_label_rotation">
          Theta
          <mat-slider min="0" max="1" step="0.1" [(ngModel)]="context.theta"></mat-slider>
       </div>
       <div class="div_label_rotation">
          Alpha
          <mat-slider min="0" max="1" step="0.1" [(ngModel)]="context.alpha"></mat-slider>
-      </div>
+      </div-->
 
    </mat-expansion-panel>
 </mat-accordion>
