--- a/src/app/graph/graph.component.css
+++ b/src/app/graph/graph.component.css
@@ -14,15 +14,23 @@ svg {
   position: absolute;
   text-align: left;
   padding: 5px;
-  border: 1px solid rgb(50, 50, 50);
+  border: 1px solid rgb(100, 100, 100);
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 6px;
 }
 
 .tooltip_colored_box {
-  width: 12px;
-  height: 12px;
-  border-radius: 7px;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
   border: 1px solid gray;
+  display: inline-block;
   vertical-align: bottom;
+}
+
+div.tooltip {
+  position: absolute;
+  width: 300px;
+  pointer-events: none;
+  z-index: 9999 !important;
 }
